# spark-middleware

./: .env_example  Cargo.toml  Dockerfile  README.md  config.toml.example  config_example.toml  shell.nix
.github/workflows/: docker-build.yaml  docker-helm.yaml  vault-docker-helm.yaml
deploy/: production.yaml  staging.yaml
deploy/chart/: Chart.yaml  values.production.yaml  values.yaml
deploy/chart/templates/: ingress.yaml  service-monitor.yaml  service.yaml
helm/: Chart.yaml  market.ethusdc.yaml  market.ezethusdc.yaml  market.fueleth.yaml  market.fuelusdc.yaml  market.psychousdc.yaml  market.pzethusdc.yaml  market.usdcusdt.yaml  market.usdfusdc.yaml  market.usdteth.yaml  market.usdtusdc.yaml  market.wethusdc.yaml  values.ethusdc.yaml  values.ezethusdc.yaml  values.fueleth.yaml  values.fuelusdc.yaml  values.production.yaml  values.psychousdc.yaml  values.pzethusdc.yaml  values.staging.yaml  values.usdcusdt.yaml  values.usdfusdc.yaml  values.usdteth.yaml  values.usdtusdc.yaml  values.wethusdc.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service-monitor.yaml  service.yaml  static-secret-app.yaml
src/: error.rs  main.rs
src/config/: env.rs  mod.rs  settings.rs
src/indexer/: .superchain.rs.swp  envio.rs  envio_event_handler.rs  indexer.rs  mod.rs  order_event_handler.rs  pangea.rs  pangea_event_handler.rs  spot_order.rs  subsquid.rs  superchain.rs  websocket.rs
src/matchers/: .websocket.rs.swp  batch_processor.rs  manager.rs  metrics_handler.rs  mod.rs  types.rs  websocket.rs
src/metrics/: types.rs
src/middleware/: aggregator.rs  manager.rs  mod.rs  order_pool.rs  order_shard.rs
src/storage/: matching_orders.rs  mod.rs  order_book.rs  order_storage.rs
src/subscription/: envio.rs  mod.rs  subsquid.rs
src/web/: graphql.rs  mod.rs  routes.rs  server.rs
