[package]
name = "spark-middleware"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.86"
async-tungstenite = { version = "0.14", features = ["tokio-runtime"] }
async-graphql = "7.0.9"
async-graphql-rocket = "7.0.9"
chrono = { version = "0.4.38", features = ["serde"] }
ctrlc = "3.4"
dotenv = "0.15.0"
fuels = { version = "0.66.5", features = ["fuel-core-lib"] }
fuel-crypto = "0.57.1"
futures-util = "0.3"
hex = "0.4.3"
log = "0.4.21"
env_logger = "0.10"
ethers-core = "2.0.14"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
rustc-hex = "2.1.0"
schemars = "0.8.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
spark-market-sdk = "0.6.3" 
pangea-client = { git = "https://github.com/nazgull08/pangea-client/"}
thiserror = "1.0.63"
tokio = { version = "1.12", features = ["rt", "macros", "time"] }
tokio-tungstenite = "0.17.1"
toml = "0.5"
url = "2.3.1"
uuid = { version = "1.0", features = ["v4"] }
