[package]
name = "spark-middleware"
version = "0.4.3"
edition = "2021"


[dependencies]
anyhow = "1.0.92"
async-graphql = "7.0.9"
async-graphql-rocket = "7.0.9"
async-trait = "0.1.86"
async-tungstenite = { version = "0.29", features = ["tokio-runtime"] }
chrono = { version = "=0.4.39", features = ["serde"] }
ctrlc = "3.4"
dotenv = "0.15.0"
ethers-core = "2.0.14"
fuel-core-types = "0.41.7"
fuels = { version = "0.66.10", features = ["fuel-core-lib"] }
futures-util = "0.3"
graphql_client = "0.14.0"
hex = "0.4.3"
lazy_static = "1.5.0"
pangea-client = "0.3.7" 
prometheus = "0.13.4"
reqwest = "0.12.12"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
rustc-hex = "2.1.0"
schemars = "0.8.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
spark-market-sdk = "0.6.5" 
thiserror = "1.0.63"
tokio = { version = "1.41.0", features = ["rt", "macros", "time"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
toml = "0.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.3.1"
uuid = { version = "1.0", features = ["v4"] }
